# vod-cpp-sdk

./: CMakeLists.txt  README.md
demo/: CMakeLists.txt  demo.aps  demo.cpp  demo.h  demo.rc  demo.vcxproj  demo.vcxproj.filters  demoDlg.cpp  demoDlg.h  resource.h  stdafx.cpp
vodsdk/: CMakeLists.txt  apply_upload.cpp  apply_upload.h  base_cmd.h  commit_upload.cpp  commit_upload.h  main.cpp  vod.cpp  vod.h  vodapi.cpp  vodapi.h
